# ChangeLog for dev-tex/pstplus
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/dev-tex/cvs-repo/gentoo-x86/dev-tex/pstplus/ChangeLog,v 1.1 2008/01/26 13:40:51 aballier Exp $

*pstplus-1.2 (26 Jan 2008)

  26 Jan 2008; Alexis Ballier <aballier@gentoo.org> +metadata.xml,
  +pstplus-1.2.ebuild:
  Initial import, ebuild by Vincent-Xavier JUMEL
  <vincent-xavier.jumel@centraliens-marseille.fr>, bug #206949, modified a bit
  by me
