@@ -1,4 +1,14 @@
-DIST pstplus-1.2.tar.bz2 330832 RMD160 4352d5c72b24d3a5fb494257018aa6d0768b1a0c SHA1 1457b8c71083e9bc64f3bb2bbdb2921f70e0e770 SHA256 644bb9809a9a3c494fe2123802862854fb0ebaae8c837938125564be3b79c332
-EBUILD pstplus-1.2.ebuild 1053 RMD160 8c1be78d77f1752e69e57e9b856cbe7b227e2c75 SHA1 22e58caf2d590031302a39afdfbc75a92288c679 SHA256 cfc926540779e2fa215fefce7b278280b99a8889bcb7bb2041027436a3a59b11
-MISC ChangeLog 460 RMD160 9bfd27a5f32f6bba458bc9def079ee4cd1e90a8b SHA1 bc9f63a6c0839695ab61fe1f5b821d44e21f26fd SHA256 b9b964da6c2a98ea585a4468d31071e66902bf1ca38f61437ca4757a8064606a
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA1
+
+DIST pstplus-1.3.tar.bz2 272290 RMD160 5cb6056e4ca325a3ee446c7e563741185a3ac534 SHA1 1208f413d37371bc8ffe072bcb382716b3dcce64 SHA256 57372648429e74114f2e708435c80b58446c18a48093d9db68d403f45f5c2db9
+EBUILD pstplus-1.3.ebuild 1104 RMD160 dd6ad8956d23b265fa85fb22ded96d27f1603fd3 SHA1 3959e8739c670c57a659dba3e99c3740b90b6ec5 SHA256 7003e1cd13ceb45dd61abc21fe38b2a0f7ffd15e38e620ac606d2f6890ff42f5
+MISC ChangeLog 622 RMD160 5aa0c4a7ec58aefee37bea4a0b34acba148f811e SHA1 c630e9339b3f5581732e00dc99000cad7eb1217f SHA256 47bcd61c9ab2a746525b90f9a5b21381a2e8b7714754d8a74393064778720b7d
 MISC metadata.xml 156 RMD160 2bf6b2ed9ff0fcef1e902cf093ccf4ae2dcc70a0 SHA1 e9260cd53905d8569cf3327ded4c6d01653fc389 SHA256 b4971b8472ab3fe4fbfe41b331a79193ca19e86c08d055ad1c20eaf9e04b79b6
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.9 (GNU/Linux)
+
+iEYEARECAAYFAkgnabkACgkQvFcC4BYPU0r1kQCgnttdmTC51rIWqM6rFf9IeKba
+yF0An2jClSIiFWJr/ynEdlNOqcQSi9im
+=dkdx
+-----END PGP SIGNATURE-----
