@@ -1,6 +1,8 @@
 # Copyright 1999-2008 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-tex/cvs-repo/gentoo-x86/dev-tex/pstplus/Attic/pstplus-1.2.ebuild,v 1.1 2008/01/26 13:40:51 aballier Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-tex/cvs-repo/gentoo-x86/dev-tex/pstplus/Attic/pstplus-1.3.ebuild,v 1.1 2008/05/11 21:48:33 aballier Exp $
+
+EAPI=1
 
 inherit eutils qt4
 
@@ -12,7 +14,7 @@ SLOT="0"
 KEYWORDS="~amd64"
 IUSE=""
 
-DEPEND="$(qt4_min_version 4.3)"
+DEPEND="|| ( ( x11-libs/qt-gui x11-libs/qt-core ) >=x11-libs/qt-4.3.0:4 )"
 
 RDEPEND="${DEPEND}
 	virtual/latex-base
