@@ -1,6 +1,12 @@
 # ChangeLog for dev-tex/pstplus
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-tex/cvs-repo/gentoo-x86/dev-tex/pstplus/ChangeLog,v 1.1 2008/01/26 13:40:51 aballier Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-tex/cvs-repo/gentoo-x86/dev-tex/pstplus/ChangeLog,v 1.2 2008/05/11 21:48:33 aballier Exp $
+
+*pstplus-1.3 (11 May 2008)
+
+  11 May 2008; Alexis Ballier <aballier@gentoo.org> -pstplus-1.2.ebuild,
+  +pstplus-1.3.ebuild:
+  version bump, allow split qt4 deps
 
 *pstplus-1.2 (26 Jan 2008)
 
